add new h1 to main

--- a/form.html
+++ b/form.html
@@ -13,6 +13,9 @@
     
 </head>
 <body>
+    <main>
+        <h1>helloooooo</h1>
+    </main>
     <fieldset id="nnnn"> <legend ><strong>vos coordonnees</strong> </legend>   
         <form action="">
             <table style="width:50% ;">
