--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
 <body>
     <main>
         <h1>helloooooo</h1>
+        <h2>word</h2>
     </main>
     <fieldset id="nnnn"> <legend ><strong>vos coordonnees</strong> </legend>   
         <form action="">
